[IMP] base, website: add bulk delete action on ir.ui.view
Before this commit, there was no easy way to delete a whole view tree
hierarchy, you would need to somehow get all the active and inactive
views from that hierarchy in the list view (which is basically
impossible), and then select them all to unlink them.

This commit adds a "Bulk Delete" button to the QWeb view (hierarchy
view), which is mainly there for website.

It could have value to add it in the control panel action entries in
both the form and list view too, but we probably don't want to highlight
this feature too much, so it's kept away from there for now.

Being able to bulk delete is particularly useful in multi-website
environment when you need to delete a whole view hierarchy that had been
cow'd.

Technically, the bulk delete already exists before this PR thanks to the
`_force_unlink` context key. But it was not possible to use it through
the UI.

--- a/odoo/addons/base/views/ir_ui_view_views.xml
+++ b/odoo/addons/base/views/ir_ui_view_views.xml
@@ -142,6 +142,20 @@
             <field name="binding_view_types">form,list</field>
         </record>
 
+        <!-- Bulk Delete -->
+        <!-- TODO instead of 'main', would need to replace current breadcrumb entry (or just erase previous) -->
+        <record id="bulk_delete_views_action" model="ir.actions.server">
+            <field name="name">Bulk Delete</field>
+            <field name="model_id" ref="model_ir_ui_view"/>
+            <field name="state">code</field>
+            <field name="code">
+records.bulk_delete()
+action_view = env.ref('base.action_ui_view').read()[0]
+action_view['target'] = 'main'
+action = action_view
+            </field>
+        </record>
+
         <!-- View customizations -->
         <record id="view_view_custom_form" model="ir.ui.view">
             <field name="model">ir.ui.view.custom</field>
