--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -473,7 +473,7 @@ form label {
         word-break: break-word;
 
         .o_portal_chatter_message {
-            div.media-body > p:not(.o_portal_chatter_puslished_date):last-of-type {
+            div.flex-grow-1 > p:not(.o_portal_chatter_puslished_date):last-of-type {
                 margin-bottom: 5px;
             }
         }
