--- a/addons/website_membership/views/website_membership_templates.xml
+++ b/addons/website_membership/views/website_membership_templates.xml
@@ -52,12 +52,12 @@
                             <h3 class="text-center"><span t-esc="membership_data['name']"/></h3>
                             <t t-foreach="memberships_partner_ids[membership_data['id']]" t-as="partner_id">
                                 <t t-set="partner" t-value="partners[partner_id]"/>
-                                <div class="media mt-3">
+                                <div class="d-flex mt-3">
                                     <a t-attf-href="/members/#{slug(partner)}"
                                        t-field="partner.avatar_128"
                                        t-options='{"widget": "image", "qweb_img_responsive": False, "class": "o_image_64_cover mr-3"}'
                                     ></a>
-                                    <div class="media-body" style="min-height: 64px;">
+                                    <div class="flex-grow-1" style="min-height: 64px;">
                                         <a t-attf-href="/members/#{slug(partner)}">
                                             <span t-field="partner.display_name"/>
                                         </a>
