--- a/addons/hr_org_chart/static/src/scss/hr_org_chart.scss
+++ b/addons/hr_org_chart/static/src/scss/hr_org_chart.scss
@@ -135,7 +135,7 @@
         overflow: visible;
         margin-top: 0;
 
-        &, .o_media_left, .media-body {
+        &, .o_media_left, .flex-grow-1 {
             position: relative;
         }
 
@@ -143,7 +143,7 @@
             padding-right: 10px;
         }
 
-        .media-body {
+        .flex-grow-1 {
             vertical-align: middle;
 
             .badge {
@@ -203,7 +203,7 @@
             .o_media_left {
                 padding-right: 0;
             }
-            .media-body > a {
+            .flex-grow-1 > a {
                 padding-left: 10px;
                 max-width: 100%;
                 display: block;
@@ -218,7 +218,7 @@
                 .o_media_object {
                     box-shadow: 0 0 0 $o-hr-org-chart-entry-line-w*2 rgba($o-brand-primary, 0.6);
                 }
-                .media-body > a {
+                .flex-grow-1 > a {
                     .o_media_heading {
                         color: $o-brand-primary;
                     }
@@ -246,7 +246,7 @@
                 box-shadow: inset 0 0 0 $o-hr-org-chart-entry-line-w*2 white;
             }
 
-            .media-body {
+            .flex-grow-1 {
                 opacity: 1;
             }
         }
