--- a/addons/website_livechat/views/website_livechat.xml
+++ b/addons/website_livechat/views/website_livechat.xml
@@ -100,9 +100,9 @@
                         <div class="col-lg-4 mb32">
                             <h3>The Team</h3>
                             <t t-foreach="team" t-as="user">
-                                <div class="media mt-3">
+                                <div class="d-flex mt-3">
                                     <img t-att-src="image_data_uri(user.avatar_128)" class="o_image_64_cover rounded o_livechat_operator_avatar" t-att-alt="user.livechat_username or user.name"/>
-                                    <div class="media-body">
+                                    <div class="flex-grow-1">
                                         <h5>
                                             <t t-if="user.livechat_username">
                                                 <t t-esc="user.livechat_username"/>
@@ -158,11 +158,11 @@
                             <t t-if="len(channels)">
                                 <div class="col-lg-6">
                                     <t t-foreach="channels" t-as="channel">
-                                        <div t-attf-class="media#{' mt-3' if channel_index else ''}">
+                                        <div t-attf-class="d-flex#{' mt-3' if channel_index else ''}">
                                             <a t-attf-href="/livechat/channel/#{ slug(channel)}">
                                                 <img t-att-src="channel.image_128 and image_data_uri(channel.image_128) or '/web/static/img/placeholder.png'" t-att-alt="channel.name" class="o_image_64_cover"/>
                                             </a>
-                                            <div class="media-body h-100 my-auto">
+                                            <div class="flex-grow-1 h-100 my-auto">
                                                 <h4><t t-esc="channel.name"/></h4>
                                             </div>
                                         </div>
