--- a/addons/rating/views/rating_rating_views.xml
+++ b/addons/rating/views/rating_rating_views.xml
@@ -92,7 +92,7 @@
                         <t t-name="kanban-box">
                             <div class="oe_kanban_global_click d-flex align-items-center justify-content-center">
                                 <div class="row oe_kanban_details">
-                                    <div class="col-4 o_kanban_image my-auto">
+                                    <div class="col-4 my-auto">
                                         <field name="rating_image" widget="image"/>
                                     </div>
                                     <div class="col-8 pl-1">
