--- a/addons/website/views/res_config_settings_views.xml
+++ b/addons/website/views/res_config_settings_views.xml
@@ -29,14 +29,14 @@
                                     <div class="row mt8">
                                         <label class="col-lg-3 pl-0" string="Settings of Website" for="website_id"/>
                                         <field name="website_id" options="{'no_open': True, 'no_create': True}" title="Settings on this page will apply to this website"/>
-                                        <button name="action_website_create_new" type="object" string="+ New Website" class="btn-link ml-2" style="line-height: 0.5;"/>
+                                        <button name="action_website_create_new" type="object" string="+ New Website" class="col-auto btn-link ml-2" style="line-height: 0.5;"/>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <h2>Website Info</h2>
-                    <div class="col-xs-12 col-md-6 row o_settings_container" id="website_info_settings">
+                    <div class="col-xs-12 row o_settings_container" id="website_info_settings">
                         <div class="col-xs-12 col-md-6 o_setting_box">
                             <div class="o_setting_right_pane border-left-0">
                                 <div class="content-group">
