--- a/addons/website_payment/views/res_config_settings_views.xml
+++ b/addons/website_payment/views/res_config_settings_views.xml
@@ -28,8 +28,8 @@
                                     <button type="action" name="%(payment.action_payment_acquirer)d" string="View Alternatives" class="btn-link" icon="fa-arrow-right"/>
                                 </div>
                                 <div class="row mt8 ml-4" attrs="{'invisible': [('acquirers_state', '!=', 'other_than_paypal')]}">
-                                    <button name="action_configure_first_provider" type="object" class="btn-primary"><field name="first_provider_label" nolabel="1"/></button>
-                                    <button type="action" name="%(payment.action_payment_acquirer)d" string="View other providers " class="btn-link" icon="fa-arrow-right"/>
+                                    <button name="action_configure_first_provider" type="object" class="btn-primary col-auto"><field name="first_provider_label" nolabel="1"/></button>
+                                    <button type="action" name="%(payment.action_payment_acquirer)d" string="View other providers " class="btn-link col-auto" icon="fa-arrow-right"/>
                                 </div>
                             </div>
                         </div>
