[REF] web: forwardport mixins/variable from BS4 -> BS5
mixins:
* make-container-max-widths
* text-emphasis-variant

variable:
* $modal-footer-margin-between

we had to forward-port the BS4 variable `$modal-footer-margin-between`
to avoid error between px and rem calc :

e.g. of error:
Error: Incompatible units: 'rem' and 'px'.
padding: $modal-inner-padding - $modal-footer-margin-between * .5;

This is because BS5 now uses 'rem' but Odoo still continue to use 'px'.
Therefore, the calculation can't be processed.

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
+++ b/addons/web/static/src/legacy/scss/bootstrap_overridden.scss
@@ -181,6 +181,7 @@ $toast-header-background-color: $toast-background-color !default;
 
 // Padding applied to the modal body
 $modal-inner-padding: $o-horizontal-padding !default;
+$modal-footer-margin-between: 1px !default;
 
 $modal-lg: $o-modal-lg !default;
 $modal-md: $o-modal-md !default;
