--- a/addons/website_forum/views/website_forum.xml
+++ b/addons/website_forum/views/website_forum.xml
@@ -1614,7 +1614,7 @@
                                 <a class="nav-link spam_menu" id="character-tab" data-toggle="tab" href="#spam_character" role="tab" aria-controls="spam_character" aria-selected="false">圾 Text</a>
                             </li>
                         </ul>
-                        <button type="button" class="close align-self-start" data-dismiss="modal"><span aria-label="Close">×</span></button>
+                        <button type="button" class="btn-close align-self-start" data-dismiss="modal"></button>
                     </div>
                     <div class="modal-body bg-100">
                         <div class="tab-content" id="o_tab_content_spam">
