--- a/addons/mrp/views/mrp_workorder_views.xml
+++ b/addons/mrp/views/mrp_workorder_views.xml
@@ -404,35 +404,46 @@
                 <field name="workcenter_id"/>
                 <field name="product_id"/>
                 <field name="qty_production"/>
+                <field name="date_planned_start"/>
+                <field name="production_date"/>
                 <field name="product_uom_id" force_save="1"/>
                 <templates>
                     <t t-name="kanban-box">
                         <div class="oe_kanban_global_click">
                             <div class="o_kanban_card_header o_kanban_record_top">
-                                <div class="o_kanban_record_headings o_kanban_card_header_title">
-                                    <strong class="o_primary">
+                                <div class="o_kanban_workorder_title">
+                                    <h4 class="o_primary">
                                         <span><t t-esc="record.production_id.value"/></span> - <span><t t-esc="record.name.value"/></span>
-                                    </strong>
+                                    </h4>
+                                    <div class="o_kanban_record_bottom">
+                                        <h5 class="o_kanban_bottom_left">
+                                            <span><t t-esc="record.product_id.value"/>, </span> <span><t t-esc="record.qty_production.value"/> <t t-esc="record.product_uom_id.value"/></span>
+                                        </h5>
+                                    </div>
                                 </div>
-                                <div class="o_kanban_manage_button_section">
-                                    <h2 class="ml8">
-                                        <span t-attf-class="badge #{['progress'].indexOf(record.state.raw_value) > -1 ? 'text-bg-warning' : ['ready', 'waiting', 'pending'].indexOf(record.state.raw_value) > -1 ? 'text-bg-primary' : ['done'].indexOf(record.state.raw_value) > -1 ? 'text-bg-success' : 'text-bg-danger'}">
-                                            <t t-esc="record.state.value"/>
-                                        </span>
-                                    </h2>
+                                <div class="o_kanban_workorder_date">
+                                    <h5><span class="d-flex" t-esc="record.date_planned_start.value or record.production_date.value"/></h5>
                                 </div>
-                            </div>
-                            <div class="o_kanban_record_bottom">
-                                <h5 class="oe_kanban_bottom_left">
-                                    <span><t t-esc="record.product_id.value"/>, </span> <span><t t-esc="record.qty_production.value"/> <t t-esc="record.product_uom_id.value"/></span>
-                                </h5>
-                                <div class="oe_kanban_bottom_right" t-if="record.state.raw_value == 'progress'">
-                                    <span t-if="record.working_state.raw_value != 'blocked' and record.working_user_ids.raw_value.length > 0"><i class="fa fa-play" role="img" aria-label="Run" title="Run"/></span>
-                                    <span t-if="record.working_state.raw_value != 'blocked' and record.working_user_ids.raw_value.length == 0 and record.last_working_user_id.raw_value"><i class="fa fa-pause" role="img" aria-label="Pause" title="Pause"/></span>
-                                    <span t-if="record.working_state.raw_value == 'blocked' and (record.working_user_ids.raw_value.length == 0 or record.last_working_user_id.raw_value)"><i class="fa fa-stop" role="img" aria-label="Stop" title="Stop"/></span>
-                                    <t t-if="record.last_working_user_id.raw_value">
-                                        <img t-att-src="kanban_image('res.users', 'avatar_128', record.last_working_user_id.raw_value)" class="oe_kanban_avatar" alt="Avatar"/>
-                                    </t>
+                                <div class="o_kanban_workorder_status">
+                                    <div class="o_kanban_record_bottom">
+                                        <div class="oe_kanban_top_right">
+                                            <h2>
+                                                <span t-attf-class="badge #{['progress'].indexOf(record.state.raw_value) > -1 ? 'badge-warning' : ['ready', 'waiting', 'pending'].indexOf(record.state.raw_value) > -1 ? 'badge-primary' : ['done'].indexOf(record.state.raw_value) > -1 ? 'badge-success' : 'badge-danger'}">
+                                                    <t t-esc="record.state.value"/>
+                                                </span>
+                                            </h2>
+                                        </div>
+                                    </div>
+                                    <div class="o_kanban_record_bottom">
+                                        <div class="oe_kanban_bottom_right" t-if="record.state.raw_value == 'progress'">
+                                            <span t-if="record.working_state.raw_value != 'blocked' and record.working_user_ids.raw_value.length > 0"><i class="fa fa-play" role="img" aria-label="Run" title="Run"/></span>
+                                            <span t-if="record.working_state.raw_value != 'blocked' and record.working_user_ids.raw_value.length == 0 and record.last_working_user_id.raw_value"><i class="fa fa-pause" role="img" aria-label="Pause" title="Pause"/></span>
+                                            <span t-if="record.working_state.raw_value == 'blocked' and (record.working_user_ids.raw_value.length == 0 or record.last_working_user_id.raw_value)"><i class="fa fa-stop" role="img" aria-label="Stop" title="Stop"/></span>
+                                            <t name="user_avatar" t-if="record.last_working_user_id.raw_value">
+                                                <img t-att-src="kanban_image('res.users', 'avatar_128', record.last_working_user_id.raw_value)" class="oe_kanban_avatar" alt="Avatar"/>
+                                            </t>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
