[REF] *: BS5: Migrate dropdowns
- BS5 JS use the `data-bs-toggle="dropdown"` attribute to
automatically enable the BS Component.
But in this case as the `.dropdown-menu` is only rendered when the
`.dropdown-toggle` is clicked we can't initialize the Dropdown at the
first render. So we do it manually.

- change .dropdown-menu by .o-dropdown-menu (owl)
  -> to handle keyboard navigation we can't use BS dropdowns

- use currentTarget of event
  As the event can bubble we use currentTarget to be sure to be at the
  higher level in the DOM.

> All the events for the dropdown are now triggered on the dropdown
> toggle button and then bubbled up to the parent element.

- BS5 don't add .show on parent group anymore
  -> dropdown show class not on the same node on BS5

- avoid dropdown warning using margin in CSS
  BS5 show a warning if we use margin statically in CSS for a dropdown.

> Popper: CSS "margin" styles cannot be used to apply padding between
> the popper and its reference element or boundary. To replicate margin,
> use the `offset` modifier, as well as the `padding` option in the
> `preventOverflow` and `flip` modifiers.

- adapt the systray activity dropdown for mobile
  On desktop positions are now dynamic and on mobile it's static

- In BS5 the CSS `bottom: 100%;` is not more applied to the
  `.dropup .dropdown-menu` selector.

- Change right -> end and add data-bs-popper="none" to avoid
  Popper interaction

Task ID: 2766483

Part-of: odoo/odoo#95450

--- a/addons/web/static/src/legacy/scss/kanban_view.scss
+++ b/addons/web/static/src/legacy/scss/kanban_view.scss
@@ -236,24 +236,23 @@
         // Kanban Record - Dropdown
         .o_dropdown_kanban {
             @include o-position-absolute($o-kanban-inside-vgutter, $o-kanban-inside-hgutter);
-            visibility: hidden;
             margin: (-$o-kanban-inside-vgutter) (-$o-kanban-inside-hgutter) 0 0;
-            @include media-breakpoint-down(sm) {
-                visibility: visible;
-            }
-
             .dropdown-toggle {
+                visibility: hidden;
+                @include media-breakpoint-down(sm) {
+                    visibility: visible;
+                }
                 @include o-kanban-dropdown;
-            }
-            &.show .dropdown-toggle {
-                @include o-kanban-dropdown-open;
+                &.show {
+                    @include o-kanban-dropdown-open;
+                }
             }
             .dropdown-menu {
                 min-width: 11rem;
             }
         }
 
-        &:hover .o_dropdown_kanban, .o_dropdown_kanban.show {
+        &:hover .dropdown-toggle, .dropdown-toggle.show {
             visibility: visible;
         }
 
@@ -470,12 +469,14 @@
                 margin-left: $o-kanban-inside-hgutter*2;
             }
 
-            &:hover .o_kanban_config, .o_kanban_config.show {
+            .o_kanban_config .dropdown-toggle {
+                visibility: hidden;
+            }
+            &:hover .dropdown-toggle, .o_kanban_config .dropdown-toggle.show {
                 visibility: visible;
             }
 
             .o_kanban_config {
-                visibility: hidden;
 
                 @include media-breakpoint-down(sm) {
                     visibility: visible;
