--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -230,7 +230,7 @@ $o-we-toolbar-color-clickable-active: $o-we-bg-darkest;
         }
 
         // Adjust dropdown-menu position, but not when already handled in js
-        .dropdown-menu:not([x-placement]) {
+        .o-dropdown-menu:not([x-placement]) {
             margin-left: $o-we-toolbar-entries-gap;
         }
     }
@@ -303,7 +303,6 @@ $o-we-toolbar-color-clickable-active: $o-we-bg-darkest;
 
         &.colorpicker-menu {
             margin-top: 0;
-            margin-bottom: 0.125rem;
             min-width: 222px !important;
         }
     }
