--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -783,7 +783,7 @@ $-transition-duration: 200ms;
 }
 
 // Navbar
-.navbar .o_extra_menu_items.show > div {
+.navbar .o_extra_menu_items > .show {
     > li {
         + li {
             border-top: 1px solid gray('200');
