[IMP] websale_stock: add email notification
This PR adds a message "Be notified when in stock" on a product when it is out
of stock. When clicking the message, a form appears where the user can enter
his email. If he is a logged user, the email associated to the partner of the
user is pre-filled in the form. Otherwise the user enters his email.
Afterwards, the user clicks on the button and the following things take place:

   1. A product_wishlist is created with the field stock_notification to True
   with a partner associated with the email.
   2. Afterwards, the cron in addons/website_sale_stock/data/ir_cron_data.xml
   will run and send an email to every wishlist email for which the
   stock_notification is True

From a technical point of view, it moves the model product_wishlist from:
website_sale_wishlist -> website_sale.

Since website_sale_stock will use this model to we decided that it was better
to put it there and inherit it in website_sale_wishlist and website_sale_stock

task-id 2806828

--- a/addons/website_sale_stock/views/website_sale_stock_templates.xml
+++ b/addons/website_sale_stock/views/website_sale_stock_templates.xml
@@ -10,10 +10,12 @@
         </xpath>
     </template>
 
-  <template id="website_sale_stock_product" inherit_id="website_sale.product" priority="4">
-    <xpath expr="//div[@id='o_wsale_cta_wrapper']" position="after">
-      <div class="availability_messages o_not_editable"/>
-    </xpath>
-  </template>
-
+    <template id="website_sale_stock_product" inherit_id="website_sale.product" priority="4">
+        <xpath expr="//div[@id='o_wsale_cta_wrapper']" position="after">
+            <div class="availability_messages o_not_editable"/>
+        </xpath>
+        <xpath expr="//div[@id='product_details']" position="inside">
+            <input id="wsale_user_email" type="hidden" t-att-value="email"/>
+        </xpath>
+    </template>
 </odoo>
