--- a/addons/website_sale_stock_wishlist/views/templates.xml
+++ b/addons/website_sale_stock_wishlist/views/templates.xml
@@ -2,13 +2,51 @@
 <odoo>
     <template id="product_wishlist" inherit_id="website_sale_wishlist.product_wishlist">
         <xpath expr="//button[hasclass('o_wish_rm')]" position="before">
-            <small class="text-danger d-md-block" t-if="wish.product_id.sudo()._is_sold_out()">Temporarily out of stock</small>
+            <small class="text-danger d-md-block"
+                   t-if="not wish.product_id.allow_out_of_stock_order and wish.product_id._is_sold_out()">
+                Temporarily out of stock
+            </small>
         </xpath>
         <xpath expr="//button[hasclass('o_wish_rm')]" position="after">
-            <t t-set="notify" t-value="wish.stock_notification"/>
-            <button groups="base.group_no_one" t-att-data-notify="notify" t-if="notify or wish.product_id.sudo()._is_sold_out()" type="button" class="btn btn-link o_notify_stock no-decoration">
-                <small><i t-attf-class="fa #{'fa-check-square-o' if notify else 'fa-square-o'}"></i> Be notified when back in stock</small>
-            </button>
+            <t t-if="not wish.product_id.allow_out_of_stock_order and wish.product_id._is_sold_out()">
+                <div id="add_stock_email_notification_wishlist_div" t-if="not wish.product_id.allow_out_of_stock_order"
+                     class="small d-inline-block">
+                    <div class="btn btn-link" t-if="not wish.stock_notification"
+                         id="add_stock_email_notification_wishlist_button">
+                        <small>
+                            <i class="fa fa-envelope-o"/>
+                            Get notified when back in stock
+                        </small>
+                    </div>
+                    <div id="add_stock_email_notification_wishlist_form" class="d-none">
+                        <div class="input-group">
+                            <input class="input-group-append"
+                                   name="email"
+                                   type="text"
+                                   placeholder="youremail@gmail.com"
+                                   t-att-value="request.env.user.partner_id.email"/>
+                            <div class="input-group-append">
+                                <div id="add_stock_email_notification_wishlist_form_button"
+                                     class="btn btn-secondary">
+                                    <i class="fa fa-paper-plane"/>
+                                </div>
+                            </div>
+                            <div class="input-group-append">
+                                <div id="add_stock_email_notification_product_input_incorrect" class="btn d-none">
+                                    <i class="fa fa-times text-danger"/>
+                                     Invalid email
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="add_stock_email_notification_wishlist_success_message"
+                         t-att-class="'' if wish.stock_notification else 'd-none'">
+                        <i class="fa fa-bell"/>
+                        We'll notify you once the product is back in stock.
+                    </div>
+                </div>
+            </t>
         </xpath>
     </template>
 </odoo>
